Change database size estimation method.
Changed the database size estimation method for rocksDB test implementation in order to fix the compaction test. Refactor compaction.