@@ -37,7 +37,6 @@ public class RocksDBStorageForTest extends AbstractRocksDBStorage
     @Override
     protected List<ColumnFamilyDescriptor> prepareColumnFamilyDescriptors(ColumnFamilyOptions cfOptions) {
         List<ColumnFamilyDescriptor> descriptors = new ArrayList<>();
-        // RocksDB requires the default column family
         descriptors.add(new ColumnFamilyDescriptor(RocksDB.DEFAULT_COLUMN_FAMILY, cfOptions));
         return descriptors;
     }
@@ -45,25 +44,20 @@ public class RocksDBStorageForTest extends AbstractRocksDBStorage
     @Override
     public BackupStatus backup(BackupConfig config) throws BackupException {
         ensureNotClosed();
-
         if (config.getBackupDir() == null) {
             throw new BackupException("Backup directory must be specified for RocksDB backups");
         }
-
         try {
             File backupDir = config.getBackupDir();
             Files.createDirectories(backupDir.toPath());
 
-            // Use RocksDB's native BackupEngine
             try (BackupEngineOptions backupOptions = new BackupEngineOptions(backupDir.getAbsolutePath());
                  BackupEngine backupEngine = BackupEngine.open(Env.getDefault(), backupOptions)) {
 
-                // Create the backup
                 backupEngine.createNewBackup(getDb(), true);
 
-                // Get backup info
                 List<BackupInfo> backupInfos = backupEngine.getBackupInfo();
-                BackupInfo latestBackup = backupInfos.get(backupInfos.size() - 1);
+                BackupInfo latestBackup = backupInfos.getLast();
 
                 return BackupStatus.success(
                         String.valueOf(latestBackup.backupId()),
@@ -77,32 +71,26 @@ public class RocksDBStorageForTest extends AbstractRocksDBStorage
 
     @Override
     public RestoreStatus restore(RestoreConfig config) throws RestoreException {
-        //ensureNotClosed();
-
         if (config.getBackupDir() == null) {
             throw new RestoreException("Backup directory must be specified for RocksDB restores");
         }
         if (!isClosed()) {
             throw new RestoreException("Database must be closed before restore operation");
         }
-
         try {
             File backupDir = config.getBackupDir();
-
             try (BackupEngineOptions backupOptions = new BackupEngineOptions(backupDir.getAbsolutePath());
                  BackupEngine backupEngine = BackupEngine.open(Env.getDefault(), backupOptions);
                  RestoreOptions restoreOptions = new RestoreOptions(false)) {
 
-                // Restore from the latest backup
                 backupEngine.restoreDbFromLatestBackup(
                         dbDir.getAbsolutePath(),
                         dbDir.getAbsolutePath(),
                         restoreOptions
                 );
 
-                // Get info about the restored backup
                 List<BackupInfo> backupInfos = backupEngine.getBackupInfo();
-                BackupInfo restoredBackup = backupInfos.get(backupInfos.size() - 1);
+                BackupInfo restoredBackup = backupInfos.getLast();
 
                 return RestoreStatus.success(
                         String.valueOf(restoredBackup.backupId()),
@@ -117,15 +105,13 @@ public class RocksDBStorageForTest extends AbstractRocksDBStorage
     @Override
     public CompactStatus compact() throws CompactException {
         ensureNotClosed();
-
         try {
-            // Get database size before compaction
             long sizeBefore = estimateSize();
-
-            // Compact the entire database (all column families)
-            getDb().compactRange();
-
-            // Get database size after compaction
+            try (FlushOptions flushOptions = new FlushOptions().setWaitForFlush(true)) {
+                getTransactionDB().flush(flushOptions);
+            }
+            //getDb().compactRange();
+            getTransactionDB().compactRange(getDefaultHandle());
             long sizeAfter = estimateSize();
 
             return new CompactStatus(sizeBefore, sizeAfter, sizeBefore - sizeAfter);
@@ -137,21 +123,36 @@ public class RocksDBStorageForTest extends AbstractRocksDBStorage
     /**
      * Helper method to estimate database size
      */
-    private long estimateSize() throws RocksDBException {
-        String sizeStr = getDb().getProperty("rocksdb.total-sst-files-size");
-        return sizeStr != null ? Long.parseLong(sizeStr) : 0L;
+//    private long estimateSize() throws RocksDBException {
+//        String sizeStr = getDb().getProperty("rocksdb.total-sst-files-size");
+//        return sizeStr != null ? Long.parseLong(sizeStr) : 0L;
+//    }
+
+    private long estimateSize() throws CompactException {
+        try {
+            return Files.walk(dbDir.toPath())
+                        .filter(Files::isRegularFile)
+                        .mapToLong(path -> {
+                            try {
+                                return Files.size(path);
+                            } catch (IOException e) {
+                                // Log but don't fail - just skip this file
+                                return 0L;
+                            }
+                        })
+                        .sum();
+        } catch (IOException e) {
+            throw new CompactException("Failed to estimate database size: " + e.getMessage(), e);
+        }
     }
 
     /**
      * Accessor for the underlying RocksDB instance (for backup/restore operations)
      */
     private TransactionDB getDb() {
-        // You'll need to expose this from AbstractRocksDBStorage or use reflection
-        // For now, assuming you add a protected getter
         return this.getTransactionDB();
     }
 
-    // Simple test methods to validate the storage works
     public void put(byte[] key, byte[] value) throws RocksDBException {
         try (TransactionContext context = begin()) {
             context.put(getDefaultHandle(), key, value);
@@ -162,36 +163,25 @@ public class RocksDBStorageForTest extends AbstractRocksDBStorage
     public byte[] get(byte[] key) throws RocksDBException {
         try (TransactionContext context = begin()) {
             byte[] value = context.get(getDefaultHandle(), key);
-            // Treat empty arrays as deleted/null (tombstone pattern)
             return (value != null && value.length == 0) ? null : value;
         }
     }
 
     public void delete(byte[] key) throws RocksDBException {
         try (TransactionContext context = begin()) {
-            // Put null or empty to delete - depends on your implementation
             getTransactionDB().delete(getDefaultHandle(), key);
         }
     }
 
-    public long count() throws RocksDBException {
+    public long count() {
         try (TransactionContext context = begin()) {
             return context.count(getDefaultHandle());
         }
     }
 
-    private Transaction getTransaction(TransactionContext context) {
-        // Option 1: If you add getTransaction() to TransactionContext interface
-        // return context.getTransaction();
-
-        // Option 2: Workaround using reflection
-        try {
-            java.lang.reflect.Field field = context.getClass().getDeclaredField("transaction");
-            field.setAccessible(true);
-            return (Transaction) field.get(context);
-        } catch (Exception e) {
-            throw new RuntimeException("Could not access transaction field. " +
-                                               "Consider adding 'Transaction getTransaction()' to TransactionContext interface", e);
+    public void flush() throws RocksDBException {
+        try (FlushOptions flushOptions = new FlushOptions().setWaitForFlush(true)) {
+            getTransactionDB().flush(flushOptions);
         }
     }
 }
